cmake_minimum_required(VERSION 3.27)
project(A_Bugs_Life_Jake_O_Reilly_CA2)

set(CMAKE_CXX_STANDARD 17)

add_executable(A_Bugs_Life_Jake_O_Reilly_CA2 main.cpp
        Bug.cpp
        Bug.h
        Crawler.cpp
        Crawler.h
        Hopper.cpp
        Hopper.h
        Direction.cpp
        main.h)
